@@ -1,4 +1,4 @@
-.TH LIBPNG 3 "December 30, 2009"
+.TH LIBPNG 3 "January 1, 2010"
 .SH NAME
 libpng \- Portable Network Graphics (PNG) Reference Library 1.4.0rc07
 .SH SYNOPSIS
@@ -777,7 +777,7 @@ Following is a copy of the libpng.txt file that accompanies libpng.
 .SH LIBPNG.TXT
 libpng.txt - A description on how to use and modify libpng
 
- libpng version 1.4.0rc07 - December 30, 2009
+ libpng version 1.4.0rc07 - January 1, 2010
  Updated and distributed by Glenn Randers-Pehrson
  <glennrp at users.sourceforge.net>
  Copyright (c) 1998-2009 Glenn Randers-Pehrson
@@ -788,7 +788,7 @@ libpng.txt - A description on how to use and modify libpng
 
  Based on:
 
- libpng versions 0.97, January 1998, through 1.4.0rc07 - December 30, 2009
+ libpng versions 0.97, January 1998, through 1.4.0rc07 - January 1, 2010
  Updated and distributed by Glenn Randers-Pehrson
  Copyright (c) 1998-2009 Glenn Randers-Pehrson
 
@@ -3993,7 +3993,7 @@ Other rules can be inferred by inspecting the libpng source.
 
 .SH XIII. Y2K Compliance in libpng
 
-December 30, 2009
+January 1, 2010
 
 Since the PNG Development group is an ad-hoc body, we can't make
 an official declaration.
@@ -4227,7 +4227,7 @@ possible without all of you.
 
 Thanks to Frank J. T. Wojcik for helping with the documentation.
 
-Libpng version 1.4.0rc07 - December 30, 2009:
+Libpng version 1.4.0rc07 - January 1, 2010:
 Initially created in 1995 by Guy Eric Schalnat, then of Group 42, Inc.
 Currently maintained by Glenn Randers-Pehrson (glennrp at users.sourceforge.net).
 
@@ -4250,7 +4250,7 @@ this sentence.
 
 This code is released under the libpng license.
 
-libpng versions 1.2.6, August 15, 2004, through 1.4.0rc07, December 30, 2009, are
+libpng versions 1.2.6, August 15, 2004, through 1.4.0rc07, January 1, 2010, are
 Copyright (c) 2004,2006-2007 Glenn Randers-Pehrson, and are
 distributed according to the same disclaimer and license as libpng-1.2.5
 with the following individual added to the list of Contributing Authors
@@ -4349,7 +4349,7 @@ certification mark of the Open Source Initiative.
 
 Glenn Randers-Pehrson
 glennrp at users.sourceforge.net
-December 30, 2009
+January 1, 2010
 
 .\" end of man page
 
