@@ -1,6 +1,6 @@
-.TH LIBPNGPF 3 "December 29, 2009"
+.TH LIBPNGPF 3 "January 1, 2010"
 .SH NAME
-libpng \- Portable Network Graphics (PNG) Reference Library 1.4.0rc06
+libpng \- Portable Network Graphics (PNG) Reference Library 1.4.0rc07
 (private functions)
 .SH SYNOPSIS
 \fB#include <png.h>\fP
